Updated all launch scripts to set JAVA_TOOL_OPTIONS instead of JAVA_OPTS
This variable is picked up automatically by the default Java tools. Also
added additional default settings for HTTP plugin, Jetty, etc.